@@ -73,6 +73,7 @@ struct fuse_ll {
 	int no_splice_read;
 	int auto_inval_data;
 	int no_auto_inval_data;
+	int no_readdirplus;
 	struct fuse_lowlevel_ops op;
 	int got_init;
 	struct cuse_data *cuse_data;
