@@ -79,6 +79,7 @@ FUSE_2.5 {
 FUSE_2.6 {
 	global:
 		fuse_add_direntry;
+		fuse_add_direntry_plus;
 		fuse_chan_new;
 		fuse_chan_new_compat24;
 		fuse_chan_recv;
