@@ -1,3 +1,4 @@
+	* libfuse: add readdirplus support in fuse_lowlevel_ops.  Patch by Shuo Feng
 	* libfuse: add missing INIT flags
 
 FUSE 2.9.9 (2019-01-04)
@@ -25,6 +26,7 @@ FUSE 2.9.8 (2018-07-24)
   options must now match a hard-coded whitelist. It is expected that
   this whitelist covers all regular use-cases.
 * Fixed rename deadlock on FreeBSD.
+
 
 FUSE 2.9.7 (2016-06-20)
 =======================
